# AuthConsumer

./: Dockerfile  README.md  config.json  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/versions/: 2026_07_13_1118-37be5476fac1_created_all_tables.py  2026_07_13_1955-470ed32a752e_created_all_tables.py  2026_07_20_1145-bbe60daf8560_ids_made_as_uuid.py  2026_07_22_1456-3529f796ebba_added_deleted_at_for_user.py
resources/: startup.sh
src/: __init__.py  base_repository.py  base_schemas.py  config.py  database.py  enums.py  exceptions.py  logger.py  main.py  rabbit.py
src/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py
src/models/: refresh_token.py  social_account.py  user.py
src/repositories/: refresh_token.py  social_account.py  user.py
src/routers/: auth.py  dependencies.py
src/schemas/: auth.py
src/scripts/: create_config.py  create_database.py  generate_rsa_keys.py
src/services/: __init__.py  auth.py  password.py  token.py
